sol/2016_ps_f1_avenida.txt
Nova avenida
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 64.0 MB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2016f1ps_avenida.cpp: In function ‘int main()’:
2016f1ps_avenida.cpp:17:21: error: ‘INT_MAX’ was not declared in this scope
   17 |     int min_valor = INT_MAX;
      |                     ^~~~~~~
2016f1ps_avenida.cpp:4:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    3 | #include <algorithm>
  +++ |+#include <climits>
    4 |
